syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "ar.edu.itba.pod.grpc.counter";

import "common.proto";

// Counter (Servicio de Reserva de Mostradores)

enum AssignationStatus {
  ASSIGNATION_STATUS_UNSPECIFIED = 0;
  ASSIGNATION_STATUS_SUCCESSFUL = 1;
  ASSIGNATION_STATUS_PENDING = 2;
}

message SectorInfo {
  string sector_name = 1;
  repeated CounterRange counter_ranges = 2;
}

message CounterInfo {
  CounterRange counter_range = 1;
  string assigned_airline = 2;
  repeated string assigned_flights = 3;
  int32 passengers_in_queue = 4;
}

message CheckInInfo {
  string booking = 1;
  string flight = 2;
  int32 counter = 3;
}

message CounterAssignment {
  string airline = 1;
  repeated string flights = 2;
  int32 counter_count = 3;
}

service CounterService {
  rpc ListSectors(google.protobuf.Empty) returns (ListSectorsResponse);
  rpc ListCounters(ListCountersRequest) returns (ListCountersResponse);
  rpc AssignCounters(AssignCountersRequest) returns (AssignCountersResponse);
  rpc FreeCounters(FreeCountersRequest) returns (FreeCountersResponse);
  rpc CheckinCounters(CheckinCountersRequest) returns (CheckinCountersResponse);
  rpc ListPendingAssignments(ListPendingAssignmentsRequest) returns (ListPendingAssignmentsResponse);
}

// --

message ListSectorsResponse {
  repeated SectorInfo sectors = 1;
}

// --

message ListCountersRequest {
  string sector_name = 1;
  CounterRange counter_range = 2;
}

message ListCountersResponse {
  repeated CounterInfo counters = 1;
}

// --

message AssignCountersRequest {
  string sector_name = 1;
  CounterAssignment assignment = 2;
}

message AssignCountersResponse {
  AssignationStatus status = 1;

  // Por si se pudo asignar
  CounterRange assigned_counters = 2;

  // Si no se pudo asignar
  int32 pending_assignations = 3;
}

// --

message FreeCountersRequest {
  string sector_name = 1;
  int32 counter_from = 2;
  string airline = 3;
}

message FreeCountersResponse {
  int32 freed_counters = 1;
}

// --

message CheckinCountersRequest {
  string sector_name = 1;
  int32 counter_from = 2;
  string airline = 3;
}

message CheckinCountersResponse {
  repeated CheckInInfo successful_checkins = 1;
  int32 idle_counter_count = 2;
}

// --

message ListPendingAssignmentsRequest {
  string sector_name = 1;
}

message ListPendingAssignmentsResponse {
  repeated CounterAssignment assignments = 1;
}